--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,111 @@
 
 Project name: White-Wolf-OP3-PA
 
+27/11/2017
+
+  * Linux 3.18.84 (Greg Kroah-Hartman) [f2094fd]
+  * coda: fix 'kernel memory exposure attempt' in fsync (Jan Harkes) [9d02e3f]
+  * ipmi: fix unsigned long underflow (Corey Minyard) [1ad561e]
+  * ocfs2: should wait dio before inode lock in ocfs2_setattr() (alex chen) [4b87fd9]
+  * ima: do not update security.ima if appraisal status is not INTEGRITY_PASS (Roberto Sassu) [2cddfab]
+  * vlan: fix a use-after-free in vlan_device_event() (Cong Wang) [73a5f80]
+  * af_netlink: ensure that NLMSG_DONE never fails in dumps (Jason A. Donenfeld) [c2f8ddf]
+  * fealnx: Fix building error on MIPS (Huacai Chen) [542b897]
+  * sctp: do not peel off an assoc from one netns to another one (Xin Long) [249c33a]
+  * netfilter/ipvs: clear ipvs_property flag when SKB net namespace changed (Ye Yin) [3a47f23]
+  * tcp: do not mangle skb->cb[] in tcp_make_synack() (Eric Dumazet) [0fb0eb5]
+  * net/sctp: Always set scope_id in sctp_inet6_skb_msgname (Eric W. Biederman) [a74143b]
+  * ipv6/dccp: do not inherit ipv6_mc_list from parent (WANG Cong) [bdd313e]
+  * Linux 3.18.83 (Greg Kroah-Hartman) [1173a62]
+  * USB: serial: garmin_gps: fix memory leak on probe errors (Johan Hovold) [448da72]
+  * USB: serial: garmin_gps: fix I/O after failed probe and remove (Johan Hovold) [56de522]
+  * USB: serial: garmin_gps: fix memory leak on failed URB submit (Johan Hovold) [b40ddda]
+  * USB: serial: qcserial: add pid/vid for Sierra Wireless EM7355 fw update (Douglas Fischer) [363edad]
+  * USB: Add delay-init quirk for Corsair K70 LUX keyboards (Bernhard Rosenkraenzer) [ba0b377]
+  * USB: usbfs: compute urb->actual_length for isochronous (Alan Stern) [d7b2abd]
+  * uapi: fix linux/rds.h userspace compilation errors (Dmitry V. Levin) [21afce2]
+  * uapi: fix linux/rds.h userspace compilation error (Dmitry V. Levin) [1ebaef4]
+  * Revert "uapi: fix linux/rds.h userspace compilation errors" (Sasha Levin) [72bc88ff]
+  * Revert "crypto: xts - Add ECB dependency" (Sasha Levin) [edebf57]
+  * MIPS: Netlogic: Exclude netlogic,xlp-pic code from XLR builds (Paul Burton) [fb2af64]
+  * MIPS: init: Ensure reserved memory regions are not added to bootmem (Marcin Nowakowski) [72d7b31]
+  * MIPS: End asm function prologue macros with .insn (Paul Burton) [b4dbb98]
+  * ixgbe: handle close/suspend race with netif_device_detach/present (Emil Tantilov) [5fa9b9e]
+  * ixgbe: fix AER error handling (Emil Tantilov) [6a814e2]
+  * gpu: drm: mgag200: mgag200_main:- Handle error from pci_iomap (Arvind Yadav) [de5a66f]
+  * backlight: adp5520: Fix error handling in adp5520_bl_probe() (Alexey Khoroshilov) [c3655ba]
+  * backlight: lcd: Fix race condition during register (Uwe Kleine-König) [6d46127]
+  * ALSA: vx: Fix possible transfer overflow (Takashi Iwai) [d579e5a]
+  * ALSA: vx: Don't try to update capture stream before running (Takashi Iwai) [b5aaf25]
+  * scsi: lpfc: Correct issue leading to oops during link reset (James Smart) [94f8332]
+  * scsi: lpfc: Correct host name in symbolic_name field (James Smart) [a46b43c]
+  * scsi: lpfc: FCoE VPort enable-disable does not bring up the VPort (James Smart) [7dfd8c3]
+  * scsi: lpfc: Add missing memory barrier (James Smart) [c96fd35]
+  * staging: rtl8188eu: fix incorrect ERROR tags from logs (Galo Navarro) [ebd88a6]
+  * igb: Fix hw_dbg logging in igb_update_flash_i210 (Hannu Lounento) [bca9ecb]
+  * igb: close/suspend race in netif_device_detach (Todd Fujinaka) [40a616a]
+  * igb: reset the PHY before reading the PHY ID (Aaron Sierra) [a232dbd]
+  * drm/sti: sti_vtg: Handle return NULL error from devm_ioremap_nocache (Arvind Yadav) [290dc3c]
+  * ata: SATA_MV should depend on HAS_DMA (Geert Uytterhoeven) [0346e9e]
+  * ata: SATA_HIGHBANK should depend on HAS_DMA (Geert Uytterhoeven) [2cd2b0e]
+  * ata: ATA_BMDMA should depend on HAS_DMA (Geert Uytterhoeven) [260201b]
+  * ARM: dts: Fix omap3 off mode pull defines (Tony Lindgren) [461e418]
+  * ARM: OMAP2+: Fix init for multiple quirks for the same SoC (Tony Lindgren) [a4f8451]
+  * extcon: palmas: Check the parent instance to prevent the NULL (Roger Quadros) [2c00405]
+  * iscsi-target: Fix iscsi_np reset hung task during parallel delete (Nicholas Bellinger) [ecdae58]
+  * media: dib0700: fix invalid dvb_detach argument (Andrey Konovalov) [86cf5ee]
+  * media: imon: Fix null-ptr-deref in imon_probe (Arvind Yadav) [f66a4d1]
+  * Linux 3.18.82 (Greg Kroah-Hartman) [807e0c0]
+  * target/iscsi: Fix iSCSI task reassignment handling (Bart Van Assche) [aa2dafd]
+  * security/keys: add CONFIG_KEYS_COMPAT to Kconfig (Bilal Amarni) [fef12f5]
+  * ip6_gre: only increase err_count for some certain type icmpv6 in ip6gre_err (Xin Long) [c4ba7e4]
+  * ipip: only increase err_count for some certain type icmp in ipip_err (Xin Long) [0f72a45]
+  * ipv6: flowlabel: do not leave opt->tot_len with garbage (Eric Dumazet) [a63518b]
+  * sctp: reset owner sk for data chunks on out queues when migrating a sock (Xin Long) [8373e5a]
+  * tun: allow positive return values on dev_get_valid_name() call (Julien Gomes) [1389c743]
+  * net/unix: don't show information about sockets from other namespaces (Andrei Vagin) [2e5d87e]
+  * sctp: add the missing sock_owned_by_user check in sctp_icmp_redirect (Xin Long) [a8fc757]
+  * tun: call dev_get_valid_name() before register_netdevice() (Cong Wang) [05dc534]
+  * l2tp: check ps->sock before running pppol2tp_session_ioctl() (Guillaume Nault) [b7cfc58]
+  * tcp: fix tcp_mtu_probe() vs highest_sack (Eric Dumazet) [b345a6f]
+  * tun/tap: sanitize TUNSETSNDBUF input (Craig Gallek) [5daa7c0]
+  * Revert "ARM: dts: imx53-qsb-common: fix FEC pinmux config" (Greg Kroah-Hartman) [dd65d37]
+  * Input: ims-psu - check if CDC union descriptor is sane (Dmitry Torokhov) [75bcc1e]
+  * usb: usbtest: fix NULL pointer dereference (Alan Stern) [9463420]
+  * mac80211: don't compare TKIP TX MIC key in reinstall prevention (Johannes Berg) [9d5c05b]
+  * mac80211: use constant time comparison with keys (Jason A. Donenfeld) [f88beb2]
+  * mac80211: accept key reinstall without changing anything (Johannes Berg) [ca4446e]
+  * Revert "ceph: unlock dangling spinlock in try_flush_caps()" (Greg Kroah-Hartman) [d1bd843]
+  * Linux 3.18.81 (Greg Kroah-Hartman) [f69c790]
+  * x86/oprofile/ppro: Do not use __this_cpu*() in preemptible context (Borislav Petkov) [48c9520]
+  * can: c_can: don't indicate triple sampling support for D_CAN (Richard Schütz) [f282b6c]
+  * rbd: use GFP_NOIO for parent stat and data requests (Ilya Dryomov) [e81be5d]
+  * MIPS: AR7: Ensure that serial ports are properly set up (Oswald Buddenhagen) [c56f7f9]
+  * MIPS: Fix CM region target definitions (Paul Burton) [bd7f78e]
+  * MIPS: microMIPS: Fix incorrect mask in insn_table_MM (Gustavo A. R. Silva) [accaadd]
+  * ALSA: seq: Avoid invalid lockdep class warning (Takashi Iwai) [1cc8e05]
+  * ALSA: seq: Fix OSS sysex delivery in OSS emulation (Takashi Iwai) [50aca80]
+  * ARM: 8720/1: ensure dump_instr() checks addr_limit (Mark Rutland) [f37ede9]
+  * KEYS: fix NULL pointer dereference during ASN.1 parsing [ver #2] (Eric Biggers) [2a1ef13]
+  * crypto: x86/sha1-mb - fix panic due to unaligned access (Andrey Ryabinin) [7403dc6]
+  * KEYS: trusted: fix writing past end of buffer in trusted_read() (Eric Biggers) [560109e]
+  * KEYS: trusted: sanitize all key material (Eric Biggers) [366d2ab]
+  * IB/ipoib: Change list_del to list_del_init in the tx object (Feras Daoud) [03aee54]
+  * Input: mpr121 - set missing event capability (Akinobu Mita) [fe38324]
+  * Input: mpr121 - handle multiple bits change of status register (Akinobu Mita) [9deae22]
+  * IPsec: do not ignore crypto err in ah4 input (Gilad Ben-Yossef) [b6efe3d]
+  * usb: hcd: initialize hcd->flags to 0 when rm hcd (William wu) [d8baa6c]
+  * serial: sh-sci: Fix register offsets for the IRDA serial port (Laurent Pinchart) [2f746af]
+  * phy: increase size of MII_BUS_ID_SIZE and bus_id (Volodymyr Bendiuga) [e2679813]
+  * dt-bindings: Add vendor prefix for LEGO (David Lechner) [d6da8ce]
+  * dt-bindings: Add LEGO MINDSTORMS EV3 compatible specification (David Lechner) [ae2ec7c]
+  * iio: trigger: free trigger resource correctly (Alison Schofield) [885d92a]
+  * ARM: omap2plus_defconfig: Fix probe errors on UARTs 5 and 6 (Tony Lindgren) [e4e5dfa]
+  * drm: drm_minor_register(): Clean up debugfs on failure (Noralf Trønnes) [abbddfc]
+  * ARM: dts: imx53-qsb-common: fix FEC pinmux config (Patrick Bruenn) [6fc7460]
+  * xen/netback: set default upper limit of tx/rx queues to 8 (Juergen Gross) [481afaf]
+  * video: fbdev: pmag-ba-fb: Remove bad `__init' annotation (Maciej W. Rozycki) [57b616a]
+
 14/11/2017
 
   * msm: mdss: Restrict display commit thread to power cluster (Sultanxda) [b35c50c]
