--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,90 @@
 
 Project name: White-Wolf-OP3-PA
 
+07/12/2017
+
+  * Linux 3.18.86 (Greg Kroah-Hartman) [39a769f]
+  * drm/i915: Prevent zero length "index" write (Ville Syrjälä) [547165d]
+  * drm/i915: Don't try indexed reads to alternate slave addresses (Ville Syrjälä) [0b5bbc7]
+  * NFS: revalidate "." etc correctly on "open". (NeilBrown) [732a400]
+  * drm/panel: simple: Add missing panel_simple_unprepare() calls (Jonathan Liu) [8d068e6]
+  * eeprom: at24: check at24_read/write arguments (Heiner Kallweit) [7ad53b4]
+  * KVM: x86: inject exceptions produced by x86_decode_insn (Paolo Bonzini) [640470b]
+  * KVM: x86: Exit to user-mode on #UD intercept when emulator requires (Liran Alon) [1f5412b]
+  * btrfs: clear space cache inode generation always (Josef Bacik) [8cdc628]
+  * mm/madvise.c: fix madvise() infinite loop under special circumstances (chenjie) [b3622e6]
+  * mm, thp: Do not make page table dirty unconditionally in touch_p[mu]d() (Kirill A. Shutemov) [e9a3b93]
+  * ipsec: Fix aborted xfrm policy dump crash (Herbert Xu) [31ffeaf]
+  * netlink: add a start callback for starting a netlink dump (Tom Herbert) [c175ec2]
+  * Linux 3.18.85 (Greg Kroah-Hartman) [984c5e1]
+  * xen: xenbus driver must not accept invalid transaction ids (Juergen Gross) [400a04c]
+  * s390/kbuild: enable modversions for symbols exported from asm (Heiko Carstens) [fc201cc]
+  * ASoC: wm_adsp: Don't overrun firmware file buffer when reading region data (Richard Fitzgerald) [1f58a79]
+  * btrfs: return the actual error value from from btrfs_uuid_tree_iterate (Pan Bian) [18156f8]
+  * netfilter: nf_tables: fix oob access (Florian Westphal) [bfee88b]
+  * netfilter: nft_queue: use raw_smp_processor_id() (Pablo Neira Ayuso) [460b16f]
+  * staging: iio: cdc: fix improper return value (Pan Bian) [4e8b3e4]
+  * mac80211: Suppress NEW_PEER_CANDIDATE event if no room (Masashi Honma) [ea237e3]
+  * mac80211: Remove invalid flag operations in mesh TSF synchronization (Masashi Honma) [d91d7da]
+  * ALSA: hda - Apply ALC269_FIXUP_NO_SHUTUP on HDA_FIXUP_ACT_PROBE (Gabriele Mazzotta) [a4f758d]
+  * drm/armada: Fix compile fail (Daniel Vetter) [f256e30]
+  * net: 3com: typhoon: typhoon_init_one: fix incorrect return values (Thomas Preisner) [d4e5e5a]
+  * net: 3com: typhoon: typhoon_init_one: make return values more specific (Thomas Preisner) [f3a9610]
+  * PCI: Apply _HPX settings only to relevant devices (Bjorn Helgaas) [4eafb2d]
+  * RDS: RDMA: return appropriate error on rdma map failures (Santosh Shilimkar) [702bbda]
+  * e1000e: Separate signaling for link check/link up (Benjamin Poirier) [5851a4e]
+  * e1000e: Fix return value test (Benjamin Poirier) [8533bae5]
+  * e1000e: Fix error path in link detection (Benjamin Poirier) [ab8110f]
+  * iio: iio-trig-periodic-rtc: Free trigger resource correctly (Ben Hutchings) [c05aac6]
+  * USB: fix buffer overflows with parsing CDC headers (Oliver Neukum) [b1a6136]
+  * mtd: nand: Fix writing mtdoops to nand flash. (Brent Taylor) [d467690]
+  * net/9p: Switch to wait_event_killable() (Tuomas Tynkkynen) [622c6aa]
+  * media: v4l2-ctrl: Fix flags field on Control events (Ricardo Ribalda Delgado) [10a3e65]
+  * media: rc: check for integer overflow (Sean Young) [101a49a]
+  * media: Don't do DMA on stack for firmware upload in the AS102 driver (Michele Baldessari) [c97c68d]
+  * powerpc/signal: Properly handle return value from uprobe_deny_signal() (Naveen N. Rao) [0a46352]
+  * parisc: Fix validity check of pointer size argument in new CAS implementation (John David Anglin) [ad4786b]
+  * ixgbe: Fix skb list corruption on Power systems (Brian King) [df78b0b]
+  * fm10k: Use smp_rmb rather than read_barrier_depends (Brian King) [0bf6b17]
+  * i40evf: Use smp_rmb rather than read_barrier_depends (Brian King) [a0bdb71]
+  * ixgbevf: Use smp_rmb rather than read_barrier_depends (Brian King) [f190a86]
+  * igbvf: Use smp_rmb rather than read_barrier_depends (Brian King) [049daf0]
+  * igb: Use smp_rmb rather than read_barrier_depends (Brian King) [33cb600]
+  * i40e: Use smp_rmb rather than read_barrier_depends (Brian King) [f5110a0]
+  * time: Always make sure wall_to_monotonic isn't positive (Wang YanQing) [ce23592]
+  * NFC: fix device-allocation error return (Johan Hovold) [06be8f2]
+  * IB/srpt: Do not accept invalid initiator port names (Bart Van Assche) [075ddb0]
+  * clk: ti: dra7-atl-clock: fix child-node lookups (Johan Hovold) [a00843c]
+  * clk: ti: dra7-atl-clock: Fix of_node reference counting (Peter Ujfalusi) [4192bd7]
+  * KVM: SVM: obey guest PAT (Paolo Bonzini) [ea8aad3]
+  * KVM: nVMX: set IDTR and GDTR limits when loading L1 host state (Ladi Prosek) [c5210fd]
+  * iscsi-target: Fix non-immediate TMR reference leak (Nicholas Bellinger) [e063402]
+  * fs/9p: Compare qid.path in v9fs_test_inode (Tuomas Tynkkynen) [663c5b9]
+  * ALSA: timer: Remove kernel warning at compat ioctl error paths (Takashi Iwai) [5c0496d]
+  * ALSA: usb-audio: Add sanity checks in v2 clock parsers (Takashi Iwai) [4a121bb]
+  * ALSA: usb-audio: Fix potential out-of-bound access at parsing SU (Takashi Iwai) [baf9bb6]
+  * ALSA: usb-audio: Add sanity checks to FE parser (Takashi Iwai) [158b0ca]
+  * ext4: fix interaction between i_size, fallocate, and delalloc after a crash (Theodore Ts'o) [21abd9e]
+  * nfsd: deal with revoked delegations appropriately (Andrew Elble) [4887dd4]
+  * nfs: Fix ugly referral attributes (Chuck Lever) [465cb4e]
+  * NFS: Fix typo in nomigration mount option (Joshua Watt) [f3d283f6]
+  * isofs: fix timestamps beyond 2027 (Arnd Bergmann) [2272a47]
+  * bcache: check ca->alloc_thread initialized before wake up it (Coly Li) [80affac]
+  * eCryptfs: use after free in ecryptfs_release_messaging() (Dan Carpenter) [cc61ef1]
+  * nilfs2: fix race condition that causes file system corruption (Andreas Rohner) [5e892a7]
+  * autofs: don't fail mount for transient error (NeilBrown) [18f10f6]
+  * MIPS: BCM47XX: Fix LED inversion for WRT54GSv1 (Mirko Parthey) [2fe35a0]
+  * MIPS: Fix an n32 core file generation regset support regression (Maciej W. Rozycki) [c176eb2]
+  * dm: fix race between dm_get_from_kobject() and __dm_destroy() (Hou Tao) [42a1d13]
+  * dm bufio: fix integer overflow when limiting maximum cache size (Eric Biggers) [17d4e3b]
+  * ALSA: hda: Add Raven PCI ID (Vijendar Mukunda) [9faa04b]
+  * ARM: 8721/1: mm: dump: check hardware RO bit for LPAE (Philip Derrin) [7774670]
+  * x86/decoder: Add new TEST instruction pattern (Masami Hiramatsu) [5a03b4e]
+  * lib/mpi: call cond_resched() from mpi_powm() loop (Eric Biggers) [08763ff]
+  * sched: Make resched_cpu() unconditional (Paul E. McKenney) [cc53e74]
+  * ipv6: only call ip6_route_dev_notify() once for NETDEV_UNREGISTER (WANG Cong) [a6050ee]
+  * s390/disassembler: increase show_code buffer size (Vasily Gorbik) [4d094ee]
+
 27/11/2017
 
   * Linux 3.18.84 (Greg Kroah-Hartman) [f2094fd]
