--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,261 @@
 
 Project name: White-Wolf-OP3-PA
 
+21/01/2018
+
+  * Linux 3.18.92 (Greg Kroah-Hartman) [2b0e881]
+  * e1000e: Fix e1000_check_for_copper_link_ich8lan return value. (Benjamin Poirier) [0cd96d0]
+  * uas: ignore UAS for Norelsys NS1068(X) chips (Icenowy Zheng) [61fad4a]
+  * Bluetooth: Prevent stack info leak from the EFS element. (Ben Seri) [790ea26]
+  * staging: android: ashmem: fix a race condition in ASHMEM_SET_SIZE ioctl (Viktor Slavkovic) [8b06cc3]
+  * usbip: remove kernel addresses from usb device and urb debug msgs (Shuah Khan) [6d274de]
+  * USB: fix usbmon BUG trigger (Pete Zaitcev) [079eac3]
+  * usb: misc: usb3503: make sure reset is low for at least 100us (Stefan Agner) [5051747]
+  * USB: serial: cp210x: add new device ID ELV ALC 8xxx (Christian Holl) [b73b8b95]
+  * USB: serial: cp210x: add IDs for LifeScan OneTouch Verio IQ (Diego Elio Pettenò) [bdfad00]
+  * Revert "can: kvaser_usb: free buf in error paths" (Greg Kroah-Hartman) [56c588f]
+  * target: Avoid early CMD_T_PRE_EXECUTE failures during ABORT_TASK (Nicholas Bellinger) [277719a]
+  * iscsi-target: Make TASK_REASSIGN use proper se_cmd->cmd_kref (Nicholas Bellinger) [4a144a2]
+  * x86/microcode/intel: Extend BDW late-loading with a revision check (Jia Zhang) [d8719ec]
+  * crypto: algapi - fix NULL dereference in crypto_remove_spawns() (Eric Biggers) [2b051b5]
+  * net: stmmac: enable EEE in MII, GMII or RGMII only (Jerome Brunet) [909c0b8]
+  * sh_eth: fix SH7757 GEther initialization (Sergei Shtylyov) [2243ad7]
+  * sh_eth: fix TSU resource handling (Sergei Shtylyov) [09bb4d8]
+  * RDS: null pointer dereference in rds_atomic_free_op (Mohamed Ghannam) [93a8073]
+  * RDS: Heap OOB write in rds_message_alloc_sgs() (Mohamed Ghannam) [9c1fea2]
+  * 8021q: fix a memory leak for VLAN 0 device (Cong Wang) [91aa8dc]
+  * x86/acpi: Reduce code duplication in mp_override_legacy_irq() (Vikas C Sajjan) [f42e8e0]
+  * ALSA: aloop: Fix racy hw constraints adjustment (Takashi Iwai) [1bb6274]
+  * ALSA: aloop: Fix inconsistent format due to incomplete rule (Takashi Iwai) [dd71757]
+  * ALSA: aloop: Release cable upon open error path (Takashi Iwai) [bc6b8ac]
+  * ALSA: pcm: Allow aborting mutex lock at OSS read/write loops (Takashi Iwai) [73661e3]
+  * ALSA: pcm: Abort properly at pending signal in OSS read/write loops (Takashi Iwai) [970aa5e]
+  * ALSA: pcm: Add missing error checks in OSS emulation plugin builder (Takashi Iwai) [a577911]
+  * ALSA: pcm: Remove incorrect snd_BUG_ON() usages (Takashi Iwai) [30b401a]
+  * x86/acpi: Handle SCI interrupts above legacy space gracefully (Vikas C Sajjan) [1cf0e78]
+  * kvm: vmx: Scrub hardware GPRs at VM-exit (Jim Mattson) [1f0ff39]
+  * perf/core: Fix concurrent sys_perf_event_open() vs. 'move_group' race (Peter Zijlstra) [77a19f9]
+  * MIPS: Also verify sizeof `elf_fpreg_t' with PTRACE_SETREGSET (Maciej W. Rozycki) [1d23b42]
+  * MIPS: Disallow outsized PTRACE_SETREGSET NT_PRFPREG regset accesses (Maciej W. Rozycki) [e94af03]
+  * MIPS: Fix an FCSR access API regression with NT_PRFPREG and MSA (Maciej W. Rozycki) [e1bd863]
+  * MIPS: Consistently handle buffer counter with PTRACE_SETREGSET (Maciej W. Rozycki) [dbb72a5]
+  * MIPS: Guard against any partial write attempt with PTRACE_SETREGSET (Maciej W. Rozycki) [ea9acfd]
+  * MIPS: Factor out NT_PRFPREG regset access helpers (Maciej W. Rozycki) [83512d0]
+  * IB/srpt: Disable RDMA access by the initiator (Bart Van Assche) [a50d755]
+  * can: gs_usb: fix return value of the "set_bittiming" callback (Wolfgang Grandegger) [7b1b522]
+  * Input: elantech - add new icbody type 15 (Aaron Ma) [198bd00]
+  * kernel/signal.c: remove the no longer needed SIGNAL_UNKILLABLE check in complete_signal() (Oleg Nesterov) [809d3d5]
+  * kernel/signal.c: protect the SIGNAL_UNKILLABLE tasks from !sig_kernel_only() signals (Oleg Nesterov) [704bb7d]
+  * kernel/signal.c: protect the traced SIGNAL_UNKILLABLE tasks from SIGKILL (Oleg Nesterov) [529e65c]
+  * fscache: Fix the default for fscache_maybe_release_page() (David Howells) [632d9ae]
+  * crypto: n2 - cure use after free (Jan Engelhardt) [b93e2ec]
+  * kernel/acct.c: fix the acct->needcheck check in check_free_space() (Oleg Nesterov) [5d44500]
+  * Linux 3.18.91 (Greg Kroah-Hartman) [fa1d0f6]
+  * n_tty: fix EXTPROC vs ICANON interaction with TIOCINQ (aka FIONREAD) (Linus Torvalds) [fa70768]
+  * usb: xhci: Add XHCI_TRUST_TX_LENGTH for Renesas uPD720201 (Daniel Thompson) [53b0e3b]
+  * usb: add RESET_RESUME for ELSA MicroLink 56K (Oliver Neukum) [4409542]
+  * usb: Add device quirk for Logitech HD Pro Webcam C925e (Dmitry Fleytman Dmitry Fleytman) [6c3844f]
+  * USB: serial: option: add support for Telit ME910 PID 0x1101 (Daniele Palmas) [1109a76]
+  * net: ipv4: fix for a race condition in raw_sendmsg (Mohamed Ghannam) [828876d]
+  * sctp: Replace use of sockets_allocated with specified macro. (Tonghao Zhang) [6e21bfa]
+  * net: mvmdio: disable/unprepare clocks in EPROBE_DEFER case (Tobias Jordan) [4887d71]
+  * tg3: Fix rx hang on MTU change with 5717/5719 (Brian King) [3d57602]
+  * tcp md5sig: Use skb's saddr when replying to an incoming segment (Christoph Paasch) [4547249]
+  * net: qmi_wwan: add Sierra EM7565 1199:9091 (Sebastian Sjoholm) [9128595]
+  * netlink: Add netns check on taps (Kevin Cernekee) [d43abfc]
+  * net: igmp: Use correct source address on IGMPv3 reports (Kevin Cernekee) [62a6af4]
+  * ipv6: mcast: better catch silly mtu values (Eric Dumazet) [8e10b2e]
+  * ipv4: igmp: guard against silly MTU values (Eric Dumazet) [8d3ad59]
+  * kbuild: add '-fno-stack-check' to kernel build options (Linus Torvalds) [a3b775a]
+  * ASoC: twl4030: fix child-node lookup (Johan Hovold) [566a3e1]
+  * ring-buffer: Mask out the info bits when returning buffer page length (Steven Rostedt (VMware)) [d969751]
+  * tracing: Fix crash when it fails to alloc ring buffer (Jing Xia) [ca250f0]
+  * tracing: Fix possible double free on failure of allocating trace buffer (Steven Rostedt (VMware)) [8f04579]
+  * tracing: Remove extra zeroing out of the ring buffer page (Steven Rostedt (VMware)) [645f75e]
+  * net: mvneta: clear interface link status on port disable (Yelena Krivosheev) [67895fc]
+  * powerpc/perf: Dereference BHRB entries safely (Ravi Bangoria) [5573cb3]
+  * KVM: X86: Fix load RFLAGS w/o the fixed bit (Wanpeng Li) [7421d01]
+  * parisc: Hide Diva-built-in serial aux and graphics card (Helge Deller) [adc333c]
+  * PCI / PM: Force devices to D0 in pci_pm_thaw_noirq() (Rafael J. Wysocki) [6779227]
+  * ALSA: usb-audio: Fix the missing ctl name suffix at parsing SU (Takashi Iwai) [bc65683]
+  * ALSA: rawmidi: Avoid racy info ioctl via ctl device (Takashi Iwai) [a2bd6c7]
+  * mfd: twl6040: Fix child-node lookup (Johan Hovold) [4394e39]
+  * mfd: twl4030-audio: Fix sibling-node lookup (Johan Hovold) [c24c427]
+  * crypto: mcryptd - protect the per-CPU queue with a lock (Sebastian Andrzej Siewior) [8ab85a7]
+  * ACPI: APEI / ERST: Fix missing error handling in erst_reader() (Takashi Iwai) [cb41216]
+  * Linux 3.18.90 (Greg Kroah-Hartman) [c24bf88]
+  * fm10k: ensure we process SM mbx when processing VF mbx (Jacob Keller) [55e89c4]
+  * scsi: lpfc: PLOGI failures during NPIV testing (Dick Kennedy) [d651f04]
+  * scsi: lpfc: Fix secure firmware updates (Dick Kennedy) [da10716]
+  * PCI/AER: Report non-fatal errors only to the affected endpoint (Gabriele Paoloni) [da2164b]
+  * igb: check memory allocation failure (Christophe JAILLET) [84152cc]
+  * PCI: Create SR-IOV virtfn/physfn links before attaching driver (Stuart Hayes) [502ac3b]
+  * scsi: cxgb4i: fix Tx skb leak (Varun Prakash) [5c100a6]
+  * PCI: Avoid bus reset if bridge itself is broken (David Daney) [510684c]
+  * net: phy: at803x: Change error to EINVAL for invalid MAC (Dan Murphy) [40b9c48]
+  * crypto: crypto4xx - increase context and scatter ring buffer elements (Christian Lamparter) [88695a6]
+  * backlight: pwm_bl: Fix overflow condition (Derek Basehore) [1edf3c7]
+  * cpuidle: powernv: Pass correct drv->cpumask for registration (Vaidyanathan Srinivasan) [efd0a62]
+  * ARM: dma-mapping: disallow dma_get_sgtable() for non-kernel managed memory (Russell King) [f4c10c6]
+  * xhci: plat: Register shutdown for xhci_plat (Adam Wallis) [51072ca]
+  * isdn: kcapi: avoid uninitialized data (Arnd Bergmann) [4bc2e36]
+  * ARM: dts: am335x-evmsk: adjust mmc2 param to allow suspend (Reizer, Eyal) [e9dc43b4]
+  * netfilter: nf_nat_snmp: Fix panic when snmp_trap_helper fails to register (Gao Feng) [4c95bba]
+  * netfilter: nfnl_cthelper: fix a race when walk the nf_ct_helper_hash table (Liping Zhang) [24978a4]
+  * irda: vlsi_ir: fix check for DMA mapping errors (Alexey Khoroshilov) [245ebe1]
+  * i40e: Do not enable NAPI on q_vectors that have no rings (Alexander Duyck) [979baa3]
+  * net: Do not allow negative values for busy_read and busy_poll sysctl interfaces (Alexander Duyck) [572b502]
+  * s390/qeth: no ETH header for outbound AF_IUCV (Julian Wiedmann) [d4d8e64]
+  * HID: xinmo: fix for out of range for THT 2P arcade controller. (Peter Stein) [9fc4ad8]
+  * hwmon: (asus_atk0110) fix uninitialized data access (Arnd Bergmann) [03034bb]
+  * ARM: dts: ti: fix PCI bus dtc warnings (Rob Herring) [d8832ec]
+  * KVM: x86: correct async page present tracepoint (Wanpeng Li) [d40161f]
+  * scsi: lpfc: Fix PT2PT PRLI reject (Dick Kennedy) [0378916]
+  * netfilter: nfnl_cthelper: Fix memory leak (Jeffy Chen) [0f0555e]
+  * netfilter: nfnl_cthelper: fix runtime expectation policy updates (Pablo Neira Ayuso) [e9cc8a7]
+  * usb: gadget: udc: remove pointer dereference after free (Gustavo A. R. Silva) [95471b6]
+  * usb: gadget: f_uvc: Sanity check wMaxPacketSize for SuperSpeed (Roger Quadros) [b6bee98]
+  * net: qmi_wwan: Add USB IDs for MDM6600 modem on Motorola Droid 4 (Tony Lindgren) [3dec057]
+  * crypto: deadlock between crypto_alg_sem/rtnl_mutex/genl_mutex (Herbert Xu) [21337d8]
+  * r8152: fix the list rx_done may be used without initialization (hayeswang) [f3176ed]
+  * cpuidle: Validate cpu_dev in cpuidle_add_sysfs() (Vaidyanathan Srinivasan) [753e4c7]
+  * ALSA: hda - add support for docking station for HP 820 G2 (Jaroslav Kysela) [c083e34]
+  * arm64: Initialise high_memory global variable earlier (Steve Capper) [5c12cb31]
+  * Linux 3.18.89 (Greg Kroah-Hartman) [d5019a3]
+  * usb: musb: da8xx: fix babble condition handling (Bin Liu) [2c83a93]
+  * ath9k: fix tx99 potential info leak (Miaoqing Pan) [c65cdde]
+  * macvlan: Only deliver one copy of the frame to the macvlan interface (Alexander Duyck) [a332810]
+  * udf: Avoid overflow when session starts at large offset (Jan Kara) [80014b1]
+  * scsi: bfa: integer overflow in debugfs (Dan Carpenter) [3c8f448]
+  * scsi: scsi_devinfo: Add REPORTLUN2 to EMC SYMMETRIX blacklist entry (Kurt Garloff) [72108f7]
+  * raid5: Set R5_Expanded on parity devices as well as data. (NeilBrown) [2d605c9]
+  * pinctrl: adi2: Fix Kconfig build problem (Linus Walleij) [076a9aa]
+  * tty fix oops when rmmod 8250 (nixiaoming) [8aec9cd]
+  * PCI: Detach driver before procfs & sysfs teardown on device remove (Alex Williamson) [df7639d]
+  * xfs: fix log block underflow during recovery cycle verification (Brian Foster) [2a8abae]
+  * bcache: fix wrong cache_misses statistics (tang.junhui) [34f5b21]
+  * bcache: explicitly destroy mutex while exiting (Liang Chen) [a438e96]
+  * GFS2: Take inode off order_write list when setting jdata flag (Bob Peterson) [82e74e5]
+  * thermal/drivers/step_wise: Fix temperature regulation misbehavior (Daniel Lezcano) [41daeca]
+  * ppp: Destroy the mutex when cleanup (Gao Feng) [67c948b]
+  * clk: tegra: Fix cclk_lp divisor register (Michał Mirosław) [6dc01ce]
+  * mm: Handle 0 flags in _calc_vm_trans() macro (Jan Kara) [7964c7c]
+  * arm-ccn: perf: Prevent module unload while PMU is in use (Suzuki K Poulose) [2fe0d4e]
+  * target/file: Do not return error for UNMAP if length is zero (Jiang Yi) [9ae0acd]
+  * target:fix condition return in core_pr_dump_initiator_port() (tangwenji) [d99d683]
+  * iscsi-target: fix memory leak in lio_target_tiqn_addtpg() (tangwenji) [bb69b4c]
+  * target/iscsi: Fix a race condition in iscsit_add_reject_from_cmd() (Bart Van Assche) [061a1b0]
+  * powerpc/ipic: Fix status get and status clear (Christophe Leroy) [e0c0439]
+  * powerpc/opal: Fix EBUSY bug in acquiring tokens (William A. Kennington III) [707b7dc]
+  * powerpc/powernv/cpufreq: Fix the frequency read by /proc/cpuinfo (Shriya) [dcd9445]
+  * PCI/PME: Handle invalid data when reading Root Status (Qiang) [bc0c398]
+  * video: fbdev: au1200fb: Return an error code if a memory allocation fails (Christophe JAILLET) [c4cd3bc]
+  * video: fbdev: au1200fb: Release some resources if a memory allocation fails (Christophe JAILLET) [f827c8c]
+  * video: udlfb: Fix read EDID timeout (Ladislav Michl) [bb87364]
+  * fbdev: controlfb: Add missing modes to fix out of bounds access (Geert Uytterhoeven) [82497b7]
+  * target: Use system workqueue for ALUA transitions (Mike Christie) [6d6514c]
+  * btrfs: add missing memset while reading compressed inline extents (Zygo Blaxell) [1123d4b]
+  * NFSv4.1 respect server's max size in CREATE_SESSION (Olga Kornievskaia) [3b24395]
+  * perf symbols: Fix symbols__fixup_end heuristic for corner cases (Daniel Borkmann) [ae6c69a]
+  * afs: Fix afs_kill_pages() (David Howells) [e87a4fd]
+  * afs: Fix page leak in afs_write_begin() (David Howells) [8b7eb24]
+  * afs: Populate and use client modification time (Marc Dionne) [6a5039a]
+  * afs: Fix the maths in afs_fs_store_data() (David Howells) [5d36512]
+  * afs: Flush outstanding writes when an fd is closed (David Howells) [c437a06e]
+  * afs: Adjust mode bits processing (Marc Dionne) [f53539c]
+  * afs: Populate group ID from vnode status (Marc Dionne) [0815148]
+  * afs: Fix missing put_page() (David Howells) [b076f2e]
+  * drm/radeon: reinstate oland workaround for sclk (Alex Deucher) [c082f84]
+  * sched/deadline: Use deadline instead of period when calculating overflow (Steven Rostedt (VMware)) [56c1822]
+  * drm/radeon/si: add dpm quirk for Oland (Alex Deucher) [2bae4a4]
+  * openrisc: fix issue handling 8 byte get_user calls (Stafford Horne) [d4de656]
+  * net: Resend IGMP memberships upon peer notification. (Vlad Yasevich) [b06c88c]
+  * dmaengine: Fix array index out of bounds warning in __get_unmap_pool() (Matthias Kaehlcke) [4c860bb]
+  * net: wimax/i2400m: fix NULL-deref at probe (Johan Hovold) [7a7f983]
+  * Input: i8042 - add TUXEDO BU1406 (N24_25BU) to the nomux list (Dmitry Torokhov) [c1cbc8e]
+  * NFSD: fix nfsd_reset_versions for NFSv4. (NeilBrown) [1a5903b]
+  * NFSD: fix nfsd_minorversion(.., NFSD_AVAIL) (NeilBrown) [5a5a122]
+  * net: bcmgenet: Power up the internal PHY before probing the MII (Doug Berger) [a78e61d]
+  * net: bcmgenet: correct MIB access of UniMAC RUNT counters (Doug Berger) [d0d5354]
+  * net: bcmgenet: correct the RBUF_OVFL_CNT and RBUF_ERR_CNT MIB values (Doug Berger) [90bb1cb]
+  * usb: phy: isp1301: Add OF device ID table (Javier Martinez Canillas) [2e4bd4f]
+  * mac80211: Fix addition of mesh configuration element (Ilan peer) [4ca6418]
+  * KEYS: Don't permit request_key() to construct a new keyring (David Howells) [48468fd]
+  * Don't leak a key reference if request_key() tries to use a revoked keyring (David Jeffery) [63d4368]
+  * ext4: fix crash when a directory's i_size is too small (Chandan Rajendra) [bf7f97e]
+  * xhci: Don't add a virt_dev to the devs array before it's fully allocated (Mathias Nyman) [8f4664c]
+  * usbip: fix stub_send_ret_submit() vulnerability to null transfer_buffer (Shuah Khan) [e0f8687]
+  * USB: core: prevent malicious bNumInterfaces overflow (Alan Stern) [5e4d18f]
+  * USB: uas and storage: Add US_FL_BROKEN_FUA for another JMicron JMS567 ID (David Kozub) [efc9841]
+  * autofs: fix careless error in recent commit (NeilBrown) [e5ffe02]
+  * crypto: salsa20 - fix blkcipher_walk API usage (Eric Biggers) [b2584fe]
+  * crypto: hmac - require that the underlying hash algorithm is unkeyed (Eric Biggers) [3dc59fe]
+  * Linux 3.18.88 (Greg Kroah-Hartman) [158be8b]
+  * usb: gadget: ffs: Forbid usb_ep_alloc_request from sleeping (Vincent Pelletier) [c1e2bb2]
+  * arm: KVM: Fix VTTBR_BADDR_MASK BUG_ON off-by-one (Marc Zyngier) [e125616]
+  * audit: ensure that 'audit=1' actually enables audit for PID 1 (Paul Moore) [9c0b606]
+  * afs: Connect up the CB.ProbeUuid (David Howells) [1e61725]
+  * IB/mlx5: Assign send CQ and recv CQ of UMR QP (Majd Dibbiny) [cdb3c67]
+  * IB/mlx4: Increase maximal message size under UD QP (Mark Bloch) [09ffb05]
+  * xfrm: Copy policy family in clone_policy (Herbert Xu) [e247427]
+  * atm: horizon: Fix irq release error (Arvind Yadav) [d671435]
+  * sctp: use the right sk after waking up from wait_buf sleep (Xin Long) [c680161]
+  * sctp: do not free asoc when it is already dead in sctp_sendmsg (Xin Long) [9e32d00]
+  * sparc64/mm: set fields in deferred pages (Pavel Tatashin) [a85f921]
+  * sunrpc: Fix rpc_task_begin trace point (Chuck Lever) [ca91721]
+  * NFS: Fix a typo in nfs_rename() (Trond Myklebust) [0ec3c4f]
+  * dynamic-debug-howto: fix optional/omitted ending line number to be LARGE instead of 0 (Randy Dunlap) [d9fc1fd]
+  * lib/genalloc.c: make the avail variable an atomic_long_t (Stephen Bates) [0cfc9d8c]
+  * route: update fnhe_expires for redirect when the fnhe exists (Xin Long) [70420e4]
+  * route: also update fnhe_genid when updating a route cache (Xin Long) [420f7ba]
+  * EDAC, i5000, i5400: Fix definition of NRECMEMB register (Jérémy Lefaure) [15f043d]
+  * EDAC, i5000, i5400: Fix use of MTR_DRAM_WIDTH macro (Jérémy Lefaure) [975171d]
+  * axonram: Fix gendisk handling (Jan Kara) [6e9acc9]
+  * i2c: riic: fix restart condition (Chris Brandt) [e73d904]
+  * crypto: s5p-sss - Fix completing crypto request in IRQ handler (Krzysztof Kozlowski) [821c017]
+  * ipv6: reorder icmpv6_init() and ip6_mr_init() (WANG Cong) [5c4518f]
+  * bnx2x: fix possible overrun of VFPF multicast addresses array (Michal Schmidt) [d7e7830]
+  * spi_ks8995: fix "BUG: key accdaa28 not in .data!" (Blomme, Maarten) [66ab94e]
+  * arm: KVM: Survive unknown traps from guests (Mark Rutland) [f4c853f]
+  * KVM: nVMX: reset nested_run_pending if the vCPU is going to be reset (Wanpeng Li) [82b8ea4]
+  * irqchip/crossbar: Fix incorrect type of register size (Franck Demathieu) [5bf1672]
+  * scsi: lpfc: Fix crash during Hardware error recovery on SLI3 adapters (James Smart) [7d15a3e]
+  * workqueue: trigger WARN if queue_delayed_work() is called with NULL @wq (Tejun Heo) [8694655]
+  * libata: drop WARN from protocol error in ata_sff_qc_issue() (Tejun Heo) [17e9fb9]
+  * USB: gadgetfs: Fix a potential memory leak in 'dev_config()' (Christophe JAILLET) [823dc5c]
+  * usb: gadget: configs: plug memory leak (John Keeping) [e717fb5]
+  * selftest/powerpc: Fix false failures for skipped tests (Sachin Sant) [e162628]
+  * Revert "s390/kbuild: enable modversions for symbols exported from asm" (Sasha Levin) [3624f35]
+  * Revert "drm/armada: Fix compile fail" (Sasha Levin) [36f1e42]
+  * net/packet: fix a race in packet_bind() and packet_notifier() (Eric Dumazet) [eedfdb9]
+  * sit: update frag_off info (Hangbin Liu) [0e79ba6]
+  * rds: Fix NULL pointer dereference in __rds_rdma_map (Håkon Bugge) [9efea53]
+  * arm64: fpsimd: Prevent registers leaking from dead tasks (Dave Martin) [5266a89]
+  * KVM: VMX: remove I/O port 0x80 bypass on Intel hosts (Andrew Honig) [9f9e857]
+  * arm64: KVM: fix VTTBR_BADDR_MASK BUG_ON off-by-one (Kristina Martsenko) [d83f38c]
+  * media: dvb: i2c transfers over usb cannot be done from stack (Laurent Caumont) [a3b20d5]
+  * kdb: Fix handling of kallsyms_symbol_next() return value (Daniel Thompson) [bd518d9]
+  * iommu/vt-d: Fix scatterlist offset handling (Robin Murphy) [71e031e]
+  * ALSA: usb-audio: Add check return value for usb_string() (Jaejoong Kim) [9129d8d]
+  * ALSA: usb-audio: Fix out-of-bound error (Jaejoong Kim) [bf3f856]
+  * ALSA: seq: Remove spurious WARN_ON() at timer check (Takashi Iwai) [e901d8c]
+  * ALSA: pcm: prevent UAF in snd_pcm_info (Robb Glasser) [bf95993]
+  * x86/PCI: Make broadcom_postcore_init() check acpi_disabled (Rafael J. Wysocki) [0115814]
+  * X.509: reject invalid BIT STRING for subjectPublicKey (Eric Biggers) [8d935da]
+  * KEYS: add missing permission check for request_key() destination (Eric Biggers) [a41cd6c]
+  * ASN.1: check for error from ASN1_OP_END__ACT actions (Eric Biggers) [97f8f2f]
+  * efi: Move some sysfs files to be read-only by root (Greg Kroah-Hartman) [3a827e3]
+  * isa: Prevent NULL dereference in isa_bus driver callbacks (William Breathitt Gray) [959f22f]
+  * hv: kvp: Avoid reading past allocated blocks from KVP file (Paul Meyer) [7a6a665]
+  * virtio: release virtio index when fail to device_register (weiping zhang) [24f29b6]
+  * can: usb_8dev: cancel urb on -EPIPE and -EPROTO (Martin Kelly) [914a2c2]
+  * can: esd_usb2: cancel urb on -EPIPE and -EPROTO (Martin Kelly) [624df4b]
+  * can: ems_usb: cancel urb on -EPIPE and -EPROTO (Martin Kelly) [eb1b039]
+  * can: kvaser_usb: cancel urb on -EPIPE and -EPROTO (Martin Kelly) [1517377]
+  * can: kvaser_usb: ratelimit errors if incomplete messages are received (Jimmy Assarsson) [97e5e24]
+  * can: kvaser_usb: Fix comparison bug in kvaser_usb_read_bulk_callback() (Jimmy Assarsson) [86ec65b]
+  * can: kvaser_usb: free buf in error paths (Jimmy Assarsson) [b9b6768]
+
 11/12/2017
 
   * Linux 3.18.87 (Greg Kroah-Hartman) [312c9f3]
